[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/img/btn-close.png" type="Texture" id=1]
[ext_resource path="res://assets/img/btn-close-pressed.png" type="Texture" id=2]
[ext_resource path="res://scenes/TeamsEditorListItem.gd" type="Script" id=3]
[ext_resource path="res://themes/main_theme.tres" type="Theme" id=4]

[node name="TeamListItem" type="HBoxContainer"]
margin_right = 1200.0
margin_bottom = 100.0
rect_min_size = Vector2( 600, 100 )
theme = ExtResource( 4 )
custom_constants/separation = 20
alignment = 1
script = ExtResource( 3 )

[node name="TeamNameTextEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
margin_left = 155.0
margin_right = 755.0
margin_bottom = 100.0
rect_min_size = Vector2( 600, 40 )
align = 1
caret_blink = true

[node name="TeamScoreTextEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
margin_left = 775.0
margin_right = 925.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 40 )
text = "0"
align = 1
placeholder_text = "0"
caret_blink = true

[node name="RemoveButton" type="TextureButton" parent="."]
margin_left = 945.0
margin_right = 1045.0
margin_bottom = 100.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )

[connection signal="text_changed" from="TeamNameTextEdit" to="." method="_on_TeamNameTextEdit_text_changed"]
[connection signal="text_entered" from="TeamNameTextEdit" to="." method="_on_TeamNameTextEdit_text_entered"]
[connection signal="text_changed" from="TeamScoreTextEdit" to="." method="_on_TeamScoreTextEdit_text_changed"]
[connection signal="pressed" from="RemoveButton" to="." method="_on_RemoveButton_pressed"]
